--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,22 @@
 .container {
 	display: flex;
+
+	/* background-color: var(--color-primary); */
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	justify-content: center;
-	align-items: center;
-
-	background-color: var(--color-primary);
-
-	color: var(--color-action-text);
 	font-size: var(--font-size-2xl);
 	font-weight: var(--font-weight-semibold);
+
+	color: var(--color-action-text);
+}
+
+.temp-block {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	aspect-ratio: 4 / 1;
 }
