--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -139,12 +139,9 @@ h4,
 h5,
 h6 {
 	margin: 0;
+	color: light-dark(var(--color-primary), var(--color-base));
 	font-weight: var(--font-weight-semibold);
-	/* color: var(--base-color); */
 	line-height: 1.25;
-	color: light-dark(red, blue);
-
-	background-image: linear-gradient(45deg, #fa0 var(--gradient-percentage), #f0a);
 }
 
 div {
